--- a/prompt_templates/templates/communication/grammer_spelling.yaml
+++ b/prompt_templates/templates/communication/grammer_spelling.yaml
@@ -10,4 +10,4 @@ style_prompt: |
   - Use active voice
   - Keep sentences short
   - Ensure proper punctuation
-  - Do not use -hyphens to combine words
+  - Avoid using dashes (– or -) to connect words or clauses. Use commas or full sentences instead.
