--- a/prompt_templates/templates/communication/formal_mail.yaml
+++ b/prompt_templates/templates/communication/formal_mail.yaml
@@ -11,3 +11,4 @@ style_prompt: |
   - Ensure clarity and conciseness in the message.
   - Avoid colloquial language and contractions.
   - Avoid using dashes (– or -) to connect words or clauses. Use commas or full sentences instead.
+labels: [communication, email, formal, business, professional]
