--- a/prompt_templates/templates/communication/grammer_spelling.yaml
+++ b/prompt_templates/templates/communication/grammer_spelling.yaml
@@ -11,3 +11,4 @@ style_prompt: |
   - Keep sentences short
   - Ensure proper punctuation
   - Avoid using dashes (– or -) to connect words or clauses. Use commas or full sentences instead.
+labels: [grammar, spelling, clarity, proofreading, writing]
