--- a/prompt_templates/templates/frameworks/agile/scrum/retrospectives.yaml
+++ b/prompt_templates/templates/frameworks/agile/scrum/retrospectives.yaml
@@ -10,3 +10,4 @@ style_prompt: |
   - Use neutral and non-blaming language
   - Summarize insights in a clear and concise way
   - Ensure the output is actionable for the team
+labels: [agile, retrospective, feedback, improvement, team]
