updating testing and fixed faulty yaml files

--- a/prompt_templates/templates/general/hygiene.yaml
+++ b/prompt_templates/templates/general/hygiene.yaml
@@ -2,7 +2,7 @@
 prompt_name: hygiene_prompt
 description: >
   A reusable prompt style ensuring clarity, accuracy, and clean structure in generated content.
-prompt_instruction: |
+style_prompt: |
   Before finalizing your response:
   - Review your output for clarity, coherence, and proper structure.
   - Remove hallucinations: only include verifiable facts or clearly state assumptions.
