--- a/prompt_templates/templates/general/requirements.yaml
+++ b/prompt_templates/templates/general/requirements.yaml
@@ -1,4 +1,5 @@
-topic_name: "Requirements Definition"
+---
+prompt_name: "Requirements Definition"
 description: >
   Provide a structured approach to define clear, actionable, and testable requirements for any project or initiative.
 style_prompt: |
